gke-istio/istio-1-auth-policy-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: pci-1a-deny-all
 namespace: default
spec:
  {}
