gke-istio/istio-2-auth-policy-istio-to-productpage.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: pci-2-allow-istio-ingress-to-productpage-to-all
 namespace: default
spec:
 selector:
   matchLabels:
     app: productpage
     version: v1
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
   to:
   - operation:
       methods: ["*"]
       ports: ["9080"]
