gke-istio/pci-0-network-policy-istio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pci-0-lock-istio-ingress
  namespace: istio-system
spec:
  podSelector:
    matchLabels:
      app: istio-ingressgateway
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
