gke-istio/pci-3-network-policy-productpage-to-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pci-3-allow-productpage-to-details
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: details
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: productpage
    ports:
    - protocol: TCP
      port: 9080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: productpage
    ports:
    - protocol: TCP
      port: 9080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pci-3-allow-productpage-to-reviews
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: reviews
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: productpage
    - podSelector:
        matchLabels:
          app: ratings
    ports:
    - protocol: TCP
      port: 9080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: productpage
    - podSelector:
        matchLabels:
          app: ratings
    ports:
    - protocol: TCP
      port: 9080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pci-3-allow-reviews-to-ratings
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ratings
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: reviews
    ports:
    - protocol: TCP
      port: 9080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: reviews
    ports:
    - protocol: TCP
      port: 9080
